--- a/基于pnpm的monorepo项目管理方案/项目搭建文档.md
+++ b/基于pnpm的monorepo项目管理方案/项目搭建文档.md
@@ -90,6 +90,10 @@
 
 
 
+Plus：对于运行打包后的`dist/index.html`，上面使用了http-server，其实是当时发现live-server运行报错，后来又看了看，发现其实只要把`dist/index.html`中`<script>`标签引入的src改为相对路径即可，即`src="./xxx"`。
+
+
+
 # 总结
 
 monorepo就是一种项目结构，给我的感觉就是一种代码复用的方式，不同于以往：不同项目之间互相依赖只能借助npm发包的形式，monorepo项目结构可以实时监测其他工作空间（workspace）中的代码改变。当然把多个项目集中于一个仓库行为本身就带来了一些优势，比如工作流的一致性（一套ci/cd流程配置）、代码风格的统一...
