--- a/包管理工具.md
+++ b/包管理工具.md
@@ -33,7 +33,7 @@ npm（Node Package Manager），安装node时会自动安装
   * `npm run <key>`：即运行key对应的脚本命令
   * key值为start、test、stop、restart可以省略run，如`npm start`
 * dependencies：无论开发环境与生产环境的项目依赖
-* devDependencies：项目开发依赖，某些包在生产环境是不需要的，如babel、webpack，我们项目开发完打包一次之后其他人用的时候就不需要了。这时候`npm install webpack --save-dev`或者`npm i webpack -D`即可把依赖包添加到devDependencies中。
+* devDependencies：项目开发依赖，某些包在生产环境是不需要的，如babel、webpack，我们项目开发完打包一次之后其他人用的时候就不需要了。这时候`npm install webpack --save-dev`或者`npm i webpack -D`即可把依赖包添加到devDependencies中。（`less && less-loader`也属于devDependencies——生产环境下都编译成css了，所以只是一个开发依赖）
 * peerDependencies：对等依赖，即我们依赖包A，包A必须以包B为前提，如element-plus是依赖于vue3的，element-plus项目的package.json中就会有`"peerDependencies": { "vue": "^3.2.0" }`字段。
 
 
